[package]
name = "pwnd_browser"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pwnd = { path = "../core" }
wasm-bindgen = "0.2.58"
yew = { version = "0.13.2", features = ["web_sys"] }
