[package]
name = "pwnd_cli"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pwnd"
path = "src/main.rs"

[dependencies]
arrayref = "0.3.6"
clap = { version = "2.33.0", features = ["yaml"] }
pwnd = { path = "../core" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
sqlite = "0.25.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
