[package]
name = "pwnd"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.3.2"
arrayref = "0.3.6"
getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }
qrcode = { version = "0.11", default-features = false }
rand = "0.7.3"
x25519-dalek = "0.6"
wasm-bindgen = "0.2.58"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
