[package]
name = "pwnd_core"
version = "0.1.0"
authors = ["Will Nelson <will@wnelson.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-tungstenite = { version = "0.11", features = ["tokio-runtime", "tokio-native-tls"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "4.0"
datachannel = "0.2"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4.0" # DEV DEPENDENCY
reqwest = { git = "https://github.com/seanmonstar/reqwest.git" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full", "rt"] }
tokio-stream = "0.1"
tungstenite = "0.11"
uuid = { version = "0.8", features = ["serde", "v4"] }

[features]
insecure = []
