[package]
name = "pwnd_signaler"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
dashmap = "3.7.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
rmp-serde = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "sync", "time"] }
warp = "0.2.2"
