[package]
name = "pwnd_signaler"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
futures = "0.3"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git" }
thiserror = "1.0"
tokio = { version = "1.16", features = ["sync"] }

[target.'cfg(not(target = "wasm32-unknown-unknown"))'.dependencies]
async-tungstenite = { version = "0.11", features = ["tokio-runtime", "tokio-native-tls"] }
log = "0.4"
tungstenite = "0.11"

[features]
insecure = []
